--- a/package.json
+++ b/package.json
@@ -55,15 +55,16 @@
     "@loopback/rest": "^9.2.1",
     "@loopback/rest-explorer": "^3.2.1",
     "@loopback/service-proxy": "^3.1.1",
+    "loopback-connector-postgresql": "^5.0.1",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@loopback/build": "^6.3.1",
-    "source-map-support": "^0.5.19",
+    "@loopback/eslint-config": "^10.1.1",
     "@loopback/testlab": "^3.3.1",
     "@types/node": "^10.17.56",
-    "@loopback/eslint-config": "^10.1.1",
     "eslint": "^7.23.0",
+    "source-map-support": "^0.5.19",
     "typescript": "~4.2.3"
   }
 }
