--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "url": ""
   },
   "author": "Joaquin <jiaraya4@uc.cl>",
-  "license": "",
+  "license": "UNLICENSED",
   "files": [
     "README.md",
     "dist",
